<resources>
    <string name="app_name">Test_Cafe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_updater_prepare_update">Prepare to update...</string>
    <string name="data_updater_call_server">Call to server...</string>
    <string name="data_updater_query_processing">Query processing...</string>
    <string name="data_updater_update_database">Update database...</string>
    <string name="data_updater_error_get_data">Error to get data from server.</string>
    <string name="data_updater_database_updated">Database updated!</string>
    <string name="catalog">Каталог</string>
    <string name="message">message</string>
    <string name="address">Адрес:</string>
    <string name="minsk">г. Минск</string>
    <string name="street">ул. Пирогова</string>
    <string name="building_9">д. 9</string>
    <string name="place_on_map">Положение на карте:</string>
    <string name="gmaps_api_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBfWfqnoC0tIzrZ0zCGNG4nP65J9sIrelA
    </string>
    <string name="title_activity_maps">Map</string>
</resources>
