<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.black_pearl.test_cafe.fragments.ContactsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_contacts_scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:weightSum="1">

            <TextView
                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:text="@string/minsk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold|italic"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:text="@string/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold|italic"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:text="@string/building_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold|italic"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:text="@string/place_on_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textStyle="normal|bold|italic"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <fragment
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:id="@+id/fragment_contacts_gmapFragment"
                android:layout_margin="20dp"
                class="by.black_pearl.test_cafe.fragments.GMapFragment"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
